name:                boolector
version:             2.2.0
synopsis:            bindings to SMT solver boolector
description:         bindings to SMT solver boolector
license:             AllRightsReserved
license-file:        LICENSE
author:              Armin Biere
maintainer:          johannes.waldmann@htwk-leipzig.de
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10
-- homepage:            

extra-source-files:
  build.sh
  API_Usage_Examples.hs

library
  hs-source-dirs: src
  exposed-modules:
      Boolector
      Boolector.Foreign
  other-modules:
      -- Boolector.Foreign
  build-depends:
        base, mtl, async, stm, time>=1.5

  ghc-options: -Wall -fno-warn-orphans
  default-language: Haskell2010
  build-tools:      c2hs

  extra-libraries:  boolector
  extra-lib-dirs:  /usr/local/lib64/boolector
  include-dirs: cbits/boolector
  includes:         boolector.h

Test-Suite API_Usage_Examples
  Build-Depends: base==4.*, boolector
  Type: exitcode-stdio-1.0
  main-is: API_Usage_Examples.hs
  hs-source-dirs: test

Test-Suite Lowlevel_Api_Usage_Example
  Build-Depends: base==4.*, boolector
  Type: exitcode-stdio-1.0
  main-is: Lowlevel_Api_Usage_Example.hs
  hs-source-dirs: test

