name:                boolector
version:             0.0.0.1
synopsis:            bindings to SMT solver boolector
description:         bindings to SMT solver boolector
license:             AllRightsReserved
license-file:        LICENSE
author:              Dein Stefan, Armin Biere
maintainer:          johannes.waldmann@htwk-leipzig.de
category:            Numeric
build-type:          Custom
cabal-version:       >=1.10

extra-source-files:
  build.sh

custom-setup
  setup-depends: base,
                 Cabal,
                 directory


library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
      Boolector
      Boolector.Foreign
  build-depends:
        base, mtl, async, stm, time>=1.5

  ghc-options: -Wall -fno-warn-orphans
  default-language: Haskell2010
  build-tools:      c2hs

  extra-libraries:  boolector
  includes:         boolector.h


Test-Suite API_Usage_Example
  Build-Depends: base >= 4.7 && < 5
               , boolector
  Type: exitcode-stdio-1.0
  main-is: API_Usage_Example.hs
  extra-libraries:  boolector
  hs-source-dirs: test

Test-Suite Array_Example
  Build-Depends: base >= 4.7 && < 5
               , boolector
  Type: exitcode-stdio-1.0
  main-is: Array_Example.hs
  extra-libraries:  boolector
  hs-source-dirs: test

Test-Suite UF_Example
  Build-Depends: base >= 4.7 && < 5
               , boolector
  Type: exitcode-stdio-1.0
  main-is: UF_Example.hs
  extra-libraries:  boolector
  hs-source-dirs: test
