name:                boolector
version:             0.0.0.1
synopsis:            Haskell Binding for the Boolector SMT Solver
description:         Haskell Binding for the Boolector SMT Solver
license:             MIT
license-file:        LICENSE
author:              Dein Stefan, Johannes Waldmann, Armin Biere
maintainer:          deian@cs.ucsd.edu
category:            Math, SMT, Theorem Provers, Formal Methods, Bit vectors
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
      Boolector
      Boolector.Foreign
  build-depends:
        base, 
        containers,
        mtl

  ghc-options: -Wall -fno-warn-orphans
  build-tools:      c2hs

  extra-libraries:  boolector
  includes:         boolector.h

Test-Suite API_Usage_Example
  Build-Depends: base >= 4.7 && < 5
               , boolector
  Type: exitcode-stdio-1.0
  main-is: API_Usage_Example.hs
  extra-libraries:  boolector
  hs-source-dirs: test

Test-Suite Array_Example
  Build-Depends: base >= 4.7 && < 5
               , boolector
  Type: exitcode-stdio-1.0
  main-is: Array_Example.hs
  extra-libraries:  boolector
  hs-source-dirs: test

Test-Suite UF_Example
  Build-Depends: base >= 4.7 && < 5
               , boolector
  Type: exitcode-stdio-1.0
  main-is: UF_Example.hs
  extra-libraries:  boolector
  hs-source-dirs: test
